更新配置文件，添加iOS目录到.gitignore，设置应用程序的bundleIdentifier，修改AndroidManifest以支持新的intent-filter，调整styles.xml以优化边缘到边缘的窗口设置，并在LoginScreen.js中添加调试日志以记录登录响应。

--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
         "NSCameraUsageDescription": "此应用需要访问您的相机进行视频通话",
         "NSMicrophoneUsageDescription": "此应用需要访问您的麦克风进行语音通话",
         "NSPhotoLibraryUsageDescription": "此应用需要访问您的相册"
-      }
+      },
+      "bundleIdentifier": "com.freelove.expowebrtc"
     },
     "android": {
       "adaptiveIcon": {
@@ -30,10 +31,6 @@
         "backgroundColor": "#ffffff"
       },
       "permissions": [
-        "android.permission.CAMERA",
-        "android.permission.RECORD_AUDIO",
-        "android.permission.ACCESS_NETWORK_STATE",
-        "android.permission.MODIFY_AUDIO_SETTINGS",
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO",
         "android.permission.ACCESS_NETWORK_STATE",
